# smalldoku

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindEFI.cmake
core/: CMakeLists.txt
core-ui/: CMakeLists.txt
core-ui/include/smalldoku-core-ui/: smalldoku-core-graphics.h  smalldoku-core-ui.h
core-ui/src/: smalldoku-core-graphics.c  smalldoku-core-ui.c
core/include/smalldoku/: smalldoku.h
core/src/: smalldoku.c
linux-ui/: CMakeLists.txt
linux-ui/include/smalldoku-linux/: smalldoku-x11.h
linux-ui/src/: main.c  x11.c
uefi/: CMakeLists.txt  install-smalldoku-uefi.cmake.in
uefi/include/smalldoku-uefi/: smalldoku-uefi-graphics.h  smalldoku-uefi-input.h  smalldoku-uefi.h
uefi/src/: cursor.raw  main.c  uefi-graphics.c  uefi-input.c
